# ctr-project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
notebook/: dnn_model.py  notebook.py
src/: config.py  encoding.py  evaluation.py  model.py  model_comparison.py  preprocessing.py  utils.py
src/models/: deepctr.py  embedding_mlp.py
