[tool.poetry]
name = "ctr-project"
version = "0.1.0"
description = ""
authors = ["tony <tonychunenlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
numpy = "^1.23.2"
pandas = "^2.1.3"
torch = "^2.1.1"
scikit-learn = "^1.3.2"
deepctr-torch = "^0.2.9"
tensorflow-macos = { version = "^2.15.0", markers = "platform_system=='Darwin' and platform_machine=='arm64'" }
kaggle = "^1.5.16"
dill = "^0.3.7"
seaborn = "^0.13.0"
category-encoders = "^2.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

